# lzss

./: .gitignore  LICENSE  Makefile  README.md  create_version_file.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  util.py
.circleci/: config.yml
lz77/: __init__.py  lz77.py
lzss/: __init__.py  lzss.py  version.py
tests/: test_lz77.py  test_lzss.py
